--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-Clock
 Moebius strip
 http://i.imgur.com/5NAuCcd.gif
 http://i.imgur.com/UXUYL2S.gif
 Stacked discs, spinning and changing size
+Three discs, rotated to form a sphere
